--- a/src/app/pages/pages.component.html
+++ b/src/app/pages/pages.component.html
@@ -32,4 +32,10 @@
               <!-- End footer -->
               <!-- ============================================================== -->
     </div>
+
+
+    <app-modal-imagen>
+      
+    </app-modal-imagen>
+
       </div>
