--- a/src/styles.scss
+++ b/src/styles.scss
@@ -15,3 +15,35 @@
      height: 150px;
      width: 150px;
 }
+
+
+.avatar{
+    width: 30px;
+    border-radius: 100%;
+    
+
+}
+
+.w100{
+    width: 100px;
+}
+
+.w140{
+    width: 140px;
+}
+
+.oculto{
+    display: none;
+}
+
+
+.fondo-modal-imagen{
+    background-color: rgba(0, 0, 0, 0.4);
+    position: fixed;
+    top: 0px;
+    left: 0px;
+    width: 100%;
+    height: 100%;
+    z-index: 9999;
+
+}
